okay, these were used to generate inventories and files on the disk i am sending to Steve Krupa

--- a/Python/new_workflow/00_inventory_binary_files.ipynb
+++ b/Python/new_workflow/00_inventory_binary_files.ipynb
@@ -3801,14 +3801,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[H\u001b[2J- Reading TOB3file\n"
+      "\u001b[H\u001b[2J- Reading TOB3file\n",
+      "- converting to dataframe\n",
+      "Processing file 1461: /home/thompsong/Dropbox/PROFESSIONAL/RESEARCH/3_Project_Documents/NASAprojects/201602_Rocket_Seismology/DATA/2022_DATA/WellData/Uploads/20221202/20hz/20hz_Sensors_20Hz99.dat\n",
+      "Writing/updating /data/KSC/EROSION/fromdropboxinventory/00_from_binary_files/data_inventory.csv\n"
      ]
     }
    ],
