processing before and during passcal data plus 2022 data

--- a/R/00_read_csvbz2_files.ipynb
+++ b/R/00_read_csvbz2_files.ipynb
@@ -2313,6 +2313,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52e0fdbd",
+   "metadata": {},
+   "source": [
+    "## 2. Read the first 10 rows of each file, and display them"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "2312423d",
