--- a/Python/new_workflow/00_inventory_binary_files.ipynb
+++ b/Python/new_workflow/00_inventory_binary_files.ipynb
@@ -3863,7 +3863,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skience24_pyrocko",
    "language": "python",
    "name": "python3"
   },
