get changes from laptop to hal

--- a/Python/new_workflow/04_compare_barometers.ipynb
+++ b/Python/new_workflow/04_compare_barometers.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +97,7 @@
    "source": [
     "# subset to all rows that have a 'Therm(6)' column\n",
     "df100hz_thermal = df100hz.copy().dropna(subset=['Therm(6)'])\n",
+    "df20hz_thermal = df20hz.copy().dropna(subset=['Therm(2)'])\n",
     "#display(df100hz_thermal)\n",
     "count = 0 \n",
     "lod = []\n",
@@ -161,8 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Merge the dataframes after rounding timestamps to nearest hour \n",
-    "All time series from the all2.csv are 4-hourly since we have only 1 file per 4 hours. So we can round to the nearest hour to align times that are generally within 1-s\n",
+    "## 6. Merge the dataframes after rounding timestamps to nearest minute\n",
+    "All time series from the all2.csv are 4-hourly since we have only 1 file per 4 hours. So we can round to the nearest minute to align times that are generally within 1-s\n",
     "\n",
     "Drop columns we do not need"
    ]
@@ -173,13 +174,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df100hz_elevationRemoved_PSI ['nearesthour'] = df100hz_elevationRemoved_PSI ['datetime'].dt.round('H')\n",
-    "dfbaro_elevationRemoved_PSI['nearesthour'] = dfbaro_elevationRemoved_PSI['datetime'].dt.round('H')\n",
-    "dfmerged = pd.merge(df100hz_elevationRemoved_PSI , dfbaro_elevationRemoved_PSI, on='nearesthour')\n",
-    "dfmerged = dfmerged.loc[:, ~dfmerged.columns.str.endswith('_x')]\n",
-    "dfmerged = dfmerged.loc[:, ~dfmerged.columns.str.endswith('_y')]\n",
-    "dfmerged = dfmerged.loc[:, ~dfmerged.columns.str.startswith('DynStdDev')]\n",
-    "display(dfmerged)\n"
+    "aircolumns = ['AirPressureShallow', 'AirPressureDeep', '1226420', '1226429']\n",
+    "LLE.round_datetime(df100hz_elevationRemoved_PSI, freq='min' )\n",
+    "LLE.round_datetime(dfbaro_elevationRemoved_PSI, freq='min')\n",
+    "dfmerged1 = LLE.merge_and_drop(df100hz_elevationRemoved_PSI, dfbaro_elevationRemoved_PSI, on='nearestminute')\n",
+    "display(dfmerged1)\n",
+    "dfmerged1.plot(x='nearestminute', y=aircolumns, kind='line')\n"
    ]
   },
   {
@@ -195,16 +195,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = ['AirPressureShallow', 'AirPressureDeep', '1226420', '1226429']\n",
-    "xcorr = np.ndarray(shape=(4,4), dtype=float)\n",
-    "dcshift = np.ndarray(shape=(4,4), dtype=float)\n",
-    "for i1,col1 in enumerate(cols):\n",
-    "    #display(col1, dfmerged[col1].describe())\n",
-    "    for i2,col2 in enumerate(cols):\n",
-    "        xcorr[i1,i2] = pd.Series.corr(dfmerged[col1], dfmerged[col2])\n",
-    "        dcshift[i1,i2] = dfmerged[col1].mean()-dfmerged[col2].mean()\n",
-    "display(xcorr)\n",
-    "display(dcshift)"
+    "xcorrdf1, dcshiftdf1 = LLE.xcorr_columns(dfmerged1, aircolumns)\n",
+    "zoomdf = dcshiftdf1.iloc[:2, 2:]\n",
+    "zoomnp = zoomdf.to_numpy()\n",
+    "id = zoomnp.argmax()\n",
+    "indices = np.where(zoomnp == zoomnp.max())\n",
+    "indices += (0,2)\n",
+    "print(indices)\n",
+    "#print(indices, zoomdf.iloc[indices[0]indices])\n",
+    "\n",
+    "m1 = zoomdf.idxmax()\n",
+    "print(m1)\n",
+    "m2 = zoomdf[m1].idxmax()\n",
+    "print(m1, m2)\n",
+    "\n",
+    "dcshifts1 = dcshiftdf1.iloc[0].to_dict()\n",
+    "print(dcshifts1)\n",
+    "dfshifted1 = dfmerged1.copy()\n",
+    "for k, v in dcshifts1.items():\n",
+    "    dfshifted1[k] += v\n",
+    "dfshifted1.plot(x='nearestminute', y=aircolumns, kind='line')\n",
+    "\n"
    ]
   },
   {
@@ -226,24 +237,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df100hz_elevationRemoved_aircolumnonly_noT = LLE.correctBarometricData(df100hz_thermal, ['1226420', '1226429'], transducersDF, temperatureCorrect=False, heightCorrect=True)\n",
-    "df100hz_elevationRemoved_aircolumnonly_noT['nearesthour'] = df100hz_elevationRemoved_aircolumnonly_noT['datetime'].dt.round('H')\n",
-    "dfmerged2 = pd.merge(df100hz_elevationRemoved_aircolumnonly_noT , dfbaro_elevationRemoved_PSI, on='nearesthour')\n",
-    "dfmerged2 = dfmerged2.loc[:, ~dfmerged2.columns.str.endswith('_x')]\n",
-    "dfmerged2 = dfmerged2.loc[:, ~dfmerged2.columns.str.endswith('_y')]\n",
-    "dfmerged2 = dfmerged2.loc[:, ~dfmerged2.columns.str.startswith('DynStdDev')]\n",
+    "df100hz_elevationRemoved_aircolumnonly_noT = LLE.correctBarometricData(df100hz, ['1226420', '1226429'], transducersDF, temperatureCorrect=False, heightCorrect=True)\n",
+    "\n",
+    "LLE.round_datetime(df100hz_elevationRemoved_aircolumnonly_noT, freq='min' )\n",
+    "LLE.round_datetime(dfbaro_elevationRemoved_PSI, freq='min')\n",
+    "dfmerged2 = LLE.merge_and_drop(df100hz_elevationRemoved_aircolumnonly_noT, dfbaro_elevationRemoved_PSI, on='nearestminute')\n",
+    "display(dfmerged2)\n",
+    "\n",
     "cols = ['AirPressureShallow', 'AirPressureDeep', '1226420', '1226429']\n",
-    "xcorr2 = np.ndarray(shape=(4,4), dtype=float)\n",
-    "dcshift2 = np.ndarray(shape=(4,4), dtype=float)\n",
-    "for i1,col1 in enumerate(cols):\n",
-    "    #display(col1, dfmerged2[col1].describe())\n",
-    "    for i2,col2 in enumerate(cols):\n",
-    "        xcorr2[i1,i2] = pd.Series.corr(dfmerged2[col1], dfmerged2[col2])\n",
-    "        dcshift2[i1,i2] = dfmerged2[col1].mean()-dfmerged2[col2].mean()\n",
-    "display(xcorr2)\n",
-    "display(dcshift2)\n",
-    "display(xcorr2-xcorr)\n",
-    "display(dcshift2-dcshift)"
+    "xcorrdf2, dcshiftdf2 = LLE.xcorr_columns(dfmerged2, cols)\n",
+    "\n",
+    "display(xcorrdf2-xcorrdf1)\n",
+    "display(dcshiftdf2-dcshiftdf1)"
    ]
   },
   {
