DCshifts and set depths determined nicely

--- a/Python/new_workflow/04_compare_barometers.ipynb
+++ b/Python/new_workflow/04_compare_barometers.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,25 +196,18 @@
    "outputs": [],
    "source": [
     "xcorrdf1, dcshiftdf1 = LLE.xcorr_columns(dfmerged1, aircolumns)\n",
-    "zoomdf = dcshiftdf1.iloc[:2, 2:]\n",
-    "zoomnp = zoomdf.to_numpy()\n",
-    "id = zoomnp.argmax()\n",
-    "indices = np.where(zoomnp == zoomnp.max())\n",
-    "indices += (0,2)\n",
-    "print(indices)\n",
-    "#print(indices, zoomdf.iloc[indices[0]indices])\n",
     "\n",
-    "m1 = zoomdf.idxmax()\n",
-    "print(m1)\n",
-    "m2 = zoomdf[m1].idxmax()\n",
-    "print(m1, m2)\n",
+    "def apply_dcshifts(df, xcorrdf, dcshiftdf):\n",
+    "    best_xcorr_indexes = xcorrdf.iloc[:2, 2:].stack().idxmax()\n",
+    "    dcshifts = dcshiftdf[best_xcorr_indexes[0]].to_dict()\n",
+    "    dfshifted = df.copy()\n",
+    "    for k, v in dcshifts.items():\n",
+    "        print(f'Shifting {k} by {-v} PSI')\n",
+    "        dfshifted[k] -= v\n",
+    "    return dfshifted, dcshifts\n",
     "\n",
-    "dcshifts1 = dcshiftdf1.iloc[0].to_dict()\n",
-    "print(dcshifts1)\n",
-    "dfshifted1 = dfmerged1.copy()\n",
-    "for k, v in dcshifts1.items():\n",
-    "    dfshifted1[k] += v\n",
-    "dfshifted1.plot(x='nearestminute', y=aircolumns, kind='line')\n",
+    "dfshifted1, dcshifts1 = apply_dcshifts(dfmerged1, xcorrdf1, dcshiftdf1)\n",
+    "dfshifted1.plot(x='nearestminute', y=aircolumns, kind='line', ylabel='PSI')\n",
     "\n"
    ]
   },
@@ -237,48 +230,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df100hz_elevationRemoved_aircolumnonly_noT = LLE.correctBarometricData(df100hz, ['1226420', '1226429'], transducersDF, temperatureCorrect=False, heightCorrect=True)\n",
+    "df100hz_elevationRemoved_aircolumnonly_noT = LLE.correctBarometricData(df100hz_thermal, ['1226420', '1226429'], transducersDF, temperatureCorrect=False, heightCorrect=True)\n",
+    "#dfbaro_elevationRemoved_PSI = LLE.correctBarometricData(dfbaro, ['AirPressureShallow','AirPressureDeep'], transducersDF, temperatureCorrect=False, heightCorrect=True)  \n",
     "\n",
     "LLE.round_datetime(df100hz_elevationRemoved_aircolumnonly_noT, freq='min' )\n",
-    "LLE.round_datetime(dfbaro_elevationRemoved_PSI, freq='min')\n",
+    "#LLE.round_datetime(dfbaro_elevationRemoved_PSI, freq='min')\n",
     "dfmerged2 = LLE.merge_and_drop(df100hz_elevationRemoved_aircolumnonly_noT, dfbaro_elevationRemoved_PSI, on='nearestminute')\n",
     "display(dfmerged2)\n",
+    "#dfmerged2.plot(x='nearestminute', y=aircolumns, kind='line', ylabel='PSI')\n",
     "\n",
-    "cols = ['AirPressureShallow', 'AirPressureDeep', '1226420', '1226429']\n",
-    "xcorrdf2, dcshiftdf2 = LLE.xcorr_columns(dfmerged2, cols)\n",
+    "xcorrdf2, dcshiftdf2 = LLE.xcorr_columns(dfmerged2, aircolumns)\n",
+    "dfshifted2, dcshifts2 = apply_dcshifts(dfmerged2, xcorrdf2, dcshiftdf2)\n",
+    "dfshifted2.plot(x='nearestminute', y=aircolumns, kind='line', ylabel='PSI')\n",
     "\n",
-    "display(xcorrdf2-xcorrdf1)\n",
-    "display(dcshiftdf2-dcshiftdf1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## 9. Compare with these shifts applied\n",
-    "dfmerged3 = dfmerged2.copy()\n",
-    "dfmerged3['1226420'] += 14.42556\n",
-    "dfmerged3['1226429'] += 14.55743\n",
-    "xcorr3 = np.ndarray(shape=(4,4), dtype=float)\n",
-    "dcshift3 = np.ndarray(shape=(4,4), dtype=float)\n",
-    "for i1,col1 in enumerate(cols):\n",
-    "    #display(col1, dfmerged2[col1].describe())\n",
-    "    for i2,col2 in enumerate(cols):\n",
-    "        xcorr3[i1,i2] = pd.Series.corr(dfmerged3[col1], dfmerged3[col2])\n",
-    "        dcshift3[i1,i2] = dfmerged3[col1].mean()-dfmerged3[col2].mean()\n",
-    "display(xcorr3)\n",
-    "display(dcshift3)\n",
-    "display(xcorr3-xcorr2)\n",
-    "display(dcshift3-dcshift2)"
+    "dfxcorrdiff = xcorrdf2-xcorrdf1\n",
+    "dfxcorrdiff_styled = dfxcorrdiff.style.set_caption('Difference in cross-correlation')\n",
+    "dfshiftdiff = dcshiftdf2-dcshiftdf1\n",
+    "dfshiftdiff_styled = dfshiftdiff.style.set_caption('Difference in DC levels')\n",
+    "\n",
+    "display(dfxcorrdiff_styled)\n",
+    "display(dfshiftdiff_styled)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Full workflow for 100 Hz data\n"
+    "## 9. Full workflow for 100 Hz data\n"
    ]
   },
   {
@@ -288,45 +266,74 @@
    "outputs": [],
    "source": [
     "# 10.1: Get raw 100 Hz data and remove anything with spikes\n",
-    "display(df100hz)\n",
+    "df100hz_full = df100hz.copy()\n",
+    "dfbaro_full = dfbaro.copy()\n",
     "\n",
-    "# 10.2: Correct digital air barometers only for height and calibration (digits->PSI) with a PSI shift applied\n",
-    "df100hz_correctedAirSensors = LLE.correctBarometricData(df100hz, ['1226420', '1226429'], transducersDF, temperatureCorrect=True, heightCorrect=True, dcshifts=[14.42556,14.55743])\n",
-    "display(df100hz_correctedAirSensors[['1226420', '1226429']])\n",
+    "# 10.2: Correct analog and digital air column transducers for calibration, elevation above water, and apply DC shift (no temperature correction)\n",
+    "dfbaro_dcshifted = LLE.correctBarometricData(dfbaro_full, aircolumns[:2], transducersDF, temperatureCorrect=False, heightCorrect=True, dcshifts=dcshifts2)\n",
+    "df100hz_dcshifted = LLE.correctBarometricData(df100hz_full, aircolumns[2:], transducersDF, temperatureCorrect=False, heightCorrect=True, dcshifts=dcshifts2)\n",
     "\n",
-    "# 10.3: Correct digital water transducers for calibration and barometric pressure\n",
-    "df100hz_correctedAllSensors = LLE.rawdf2psidf(df100hz_correctedAirSensors, transducersDF, temperatureCorrect=True, airpressureCorrect=True, depthCorrect=False)\n",
-    "display(df100hz_correctedAllSensors[['1226420', '1226429', '1226419', '1226421', '2151691', '2149882']])\n",
+    "# 10.3: Merge and plot\n",
+    "LLE.round_datetime(df100hz_dcshifted, freq='min')\n",
+    "LLE.round_datetime(dfbaro_dcshifted, freq='min')\n",
+    "dfmerged_dcshifted = LLE.merge_and_drop(dfbaro_dcshifted, df100hz_dcshifted, on='nearestminute', drop=False)\n",
+    "display(dfmerged_dcshifted)\n",
+    "dfmerged_dcshifted.plot(x='nearestminute', y=aircolumns, style='.', ylabel='PSI')\n",
     "\n",
-    "# 10.4: all have spikes in. \n",
-    "for col in df100hz_correctedAllSensors:\n",
-    "    if isinstance(col,str) and (col[0:2]=='12' or col[0:2]=='21'):\n",
-    "        m = df100hz_correctedAllSensors[col].median()\n",
-    "        df100hz_correctedAllSensors[col] = df100hz_correctedAllSensors[col].clip(m-0.5,m+0.5)\n",
+    "# 10.4: Correct digital water column transducers for calibration and barometric pressure\n",
+    "correctedAllSensorsPSI = LLE.rawdf2psidf(dfmerged_dcshifted, transducersDF, temperatureCorrect=False, airpressureCorrect=True, depthCorrect=False)\n",
+    "watercolumns = ['1226419', '1226421', '2151691', '2149882']\n",
+    "display(correctedAllSensorsPSI[watercolumns])\n",
     "\n",
-    "display(df100hz_correctedAllSensors[['1226420', '1226429', '1226419', '1226421', '2151691', '2149882']])\n",
+    "# 10.5: plot PSI\n",
+    "correctedAllSensorsPSI.plot(x='nearestminute', y=aircolumns+watercolumns, style='.', ylabel='PSI')\n",
     "\n",
-    "# 10.5: plot\n",
-    "df100hz_correctedAllSensors.plot(x='datetime', y=['1226420', '1226429'], style='.')\n",
-    "df100hz_correctedAllSensors.plot(x='datetime', y=['1226419', '1226421', '2151691', '2149882'], style='.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 11. To do\n",
-    "In this notebook, we have examined temperature data and air pressure data, computed cross-correlations and DC shifts, and we explored how to correct data.\n",
+    "# 10.6: convert to water levels in meters\n",
+    "def psi2meters(df, watercolumns):\n",
+    "    metersPerPSI = 0.703070\n",
+    "    df2 = df.copy()\n",
+    "    for col in df.columns:\n",
+    "        if col in watercolumns:\n",
+    "            df2[col] = -df2[col] * metersPerPSI\n",
+    "    return df2\n",
     "\n",
-    "What we need to do next is locate the other script I had written to load data between two datetimes, using all2.csv as a file lookup table. Then we need to add in these additional processing steps.\n",
+    "correctedAllSensorsMeters = psi2meters(correctedAllSensors, watercolumns)\n",
+    "correctedAllSensorsMeters.plot(x='nearestminute', y=watercolumns, style='.', ylabel='Meters')\n",
     "\n",
-    "We also need to add in steps to convert to Pascals and metres of water."
+    "\n",
+    "# 10.7: convert to water levels in meters relative to the set depth measured by Steve Krupa\n",
+    "def relative_to_set_depth(df, transducersDF, watercolumns):\n",
+    "    df2 = df.copy()\n",
+    "    for col in df.columns:\n",
+    "        if col in watercolumns:    \n",
+    "            this_transducer = LLE.get_transducer_metadata(col, transducersDF)\n",
+    "            print(this_transducer)\n",
+    "            df2[col] = df2[col] - this_transducer['set_depth_ft']*0.3048\n",
+    "    return df2\n",
+    "\n",
+    "relativeAllSensorsMeters = relative_to_set_depth(correctedAllSensorsMeters, transducersDF, watercolumns)\n",
+    "relativeAllSensorsMeters.plot(x='nearestminute', y=watercolumns, style='.', ylabel='Meters')\n",
+    "\n",
+    "\n",
+    "# 10.8: estimate correct set depths from median of each, and shift by this amount\n",
+    "\n",
+    "def estimate_sensor_depths(df, watercolumns):\n",
+    "    medians = correctedAllSensorsMeters[watercolumns].median()\n",
+    "    df2 = df.copy()\n",
+    "    for k,v in medians.items():\n",
+    "        print(f'the estimated set_depth for sensor {k} is {v:.2f} m or {v/0.3048:.2f} ft')\n",
+    "        df2[k] =  df[k] - v\n",
+    "    return df2\n",
+    "\n",
+    "estimatedAllSensorsMeters = estimate_sensor_depths(correctedAllSensorsMeters, watercolumns)\n",
+    "estimatedAllSensorsMeters.plot(x='nearestminute', y=watercolumns, style='.', ylabel='Meters')   \n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyrocko2024",
+   "display_name": "skience24_pyrocko",
    "language": "python",
    "name": "python3"
   },
