--- a/Python/new_workflow/04_compare_barometers.ipynb
+++ b/Python/new_workflow/04_compare_barometers.ipynb
@@ -783,7 +783,7 @@
     "dfbaro_elevationRemoved_PSI = LLE.correctBarometricData(all_dataframes['baro'], aircolumns[:2], transducersDF, temperatureCorrect=False, heightCorrect=True)  \n",
     "dfbaro_elevationRemoved_PSI.plot(x='datetime', y=['AirPressureShallow', 'AirPressureDeep'], kind='line')\n",
     "df100hz_elevationRemoved_aircolumnonly = LLE.correctBarometricData(df100hz_thermal, aircolumns[2:], transducersDF, temperatureCorrect=True, heightCorrect=True)\n",
-    "df100hz_elevationRemoved_PSI = LLE.rawdf2psidf(df100hz_elevationRemoved_aircolumnonly, transducersDF, temperatureCorrect=True, airpressureCorrect=True, depthCorrect=False)\n",
+    "df100hz_elevationRemoved_PSI = LLE.rawdf2psidf(df100hz_elevationRemoved_aircolumnonly, transducersDF, temperatureCorrect=True, airpressureColumn='1226429', depthCorrect=False)\n",
     "df100hz_elevationRemoved_PSI.plot(x='datetime', y=aircolumns[2:], kind='line')"
    ]
   },
@@ -2472,7 +2472,7 @@
     "dfmerged_dcshifted.plot(x='nearestminute', y=aircolumns, style='.', ylabel='PSI')\n",
     "\n",
     "# 10.4: Correct digital water column transducers for calibration and barometric pressure\n",
-    "correctedAllSensorsPSI = LLE.rawdf2psidf(dfmerged_dcshifted, transducersDF, temperatureCorrect=False, airpressureCorrect=True, depthCorrect=False)\n",
+    "correctedAllSensorsPSI = LLE.rawdf2psidf(dfmerged_dcshifted, transducersDF, temperatureCorrect=False, airpressureColumn='1226429', depthCorrect=False)\n",
     "watercolumns = ['1226419', '1226421', '2151691', '2149882']\n",
     "display(correctedAllSensorsPSI[watercolumns])\n",
     "\n",
@@ -2502,7 +2502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "skience24_pyrocko",
    "language": "python",
    "name": "python3"
   },
@@ -2516,7 +2516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
