changes from macbook

--- a/Python/new_workflow/04_compare_barometers.ipynb
+++ b/Python/new_workflow/04_compare_barometers.ipynb
@@ -14,9 +14,348 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Darwin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>serial</th>\n",
+       "      <th>Fs</th>\n",
+       "      <th>sensor</th>\n",
+       "      <th>shielding</th>\n",
+       "      <th>range_kPa_low</th>\n",
+       "      <th>range_kPa_high</th>\n",
+       "      <th>media</th>\n",
+       "      <th>type</th>\n",
+       "      <th>model</th>\n",
+       "      <th>set_depth_ft</th>\n",
+       "      <th>id</th>\n",
+       "      <th>well</th>\n",
+       "      <th>tmean</th>\n",
+       "      <th>dig0</th>\n",
+       "      <th>gf</th>\n",
+       "      <th>tt</th>\n",
+       "      <th>tt0</th>\n",
+       "      <th>tf</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>bp0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AirPressureShallow</td>\n",
+       "      <td>100</td>\n",
+       "      <td>barometer</td>\n",
+       "      <td>none</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>air</td>\n",
+       "      <td>pressure</td>\n",
+       "      <td>Keller 0507.01401.051311.07</td>\n",
+       "      <td>3.81</td>\n",
+       "      <td>6S.02374.88.HDH</td>\n",
+       "      <td>shallow</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1226420</td>\n",
+       "      <td>100</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>none</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>air</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>4.46</td>\n",
+       "      <td>6S.12264.20.HDD</td>\n",
+       "      <td>shallow</td>\n",
+       "      <td>30.68</td>\n",
+       "      <td>9751.0</td>\n",
+       "      <td>-0.006458</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>-0.008795</td>\n",
+       "      <td>14.504</td>\n",
+       "      <td>14.298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1226423</td>\n",
+       "      <td>20</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>foam</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>water</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>-5.83</td>\n",
+       "      <td>6S.12264.23.BDD</td>\n",
+       "      <td>shallow</td>\n",
+       "      <td>28.40</td>\n",
+       "      <td>9605.0</td>\n",
+       "      <td>-0.006347</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>-0.004197</td>\n",
+       "      <td>14.504</td>\n",
+       "      <td>14.298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1226419</td>\n",
+       "      <td>100</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>foam</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>water</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>-6.71</td>\n",
+       "      <td>6S.12264.19.HDD</td>\n",
+       "      <td>shallow</td>\n",
+       "      <td>27.57</td>\n",
+       "      <td>10040.0</td>\n",
+       "      <td>-0.006441</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>-0.010870</td>\n",
+       "      <td>14.504</td>\n",
+       "      <td>14.298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1226421</td>\n",
+       "      <td>100</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>none</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>water</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>-7.71</td>\n",
+       "      <td>6S.12264.21.HDD</td>\n",
+       "      <td>shallow</td>\n",
+       "      <td>27.60</td>\n",
+       "      <td>9787.0</td>\n",
+       "      <td>-0.006724</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>-0.001145</td>\n",
+       "      <td>14.504</td>\n",
+       "      <td>14.298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AirPressureDeep</td>\n",
+       "      <td>100</td>\n",
+       "      <td>barometer</td>\n",
+       "      <td>none</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>air</td>\n",
+       "      <td>pressure</td>\n",
+       "      <td>Keller 0507.01401.051311.07</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>6I.0XXXX.XX.HDH</td>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1226429</td>\n",
+       "      <td>100</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>none</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>air</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>6I.12264.29.HDD</td>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>30.60</td>\n",
+       "      <td>9800.0</td>\n",
+       "      <td>-0.006428</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>-0.002384</td>\n",
+       "      <td>14.367</td>\n",
+       "      <td>14.298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2151692</td>\n",
+       "      <td>20</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>foam</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>water</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>-9.14</td>\n",
+       "      <td>6I.21516.92.BDD</td>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>25.88</td>\n",
+       "      <td>9459.0</td>\n",
+       "      <td>-0.008038</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>21.8</td>\n",
+       "      <td>0.007666</td>\n",
+       "      <td>14.296</td>\n",
+       "      <td>14.388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2151691</td>\n",
+       "      <td>100</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>foam</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>water</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>-18.31</td>\n",
+       "      <td>6I.21516.91.HDD</td>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>25.70</td>\n",
+       "      <td>9414.0</td>\n",
+       "      <td>-0.008142</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>21.5</td>\n",
+       "      <td>0.008742</td>\n",
+       "      <td>14.296</td>\n",
+       "      <td>14.388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2149882</td>\n",
+       "      <td>100</td>\n",
+       "      <td>vibrating_wire</td>\n",
+       "      <td>none</td>\n",
+       "      <td>70</td>\n",
+       "      <td>170</td>\n",
+       "      <td>water</td>\n",
+       "      <td>level</td>\n",
+       "      <td>Geokon 4500AL</td>\n",
+       "      <td>-19.14</td>\n",
+       "      <td>6I.21498.82.HDD</td>\n",
+       "      <td>intermediate</td>\n",
+       "      <td>25.96</td>\n",
+       "      <td>9734.0</td>\n",
+       "      <td>-0.008075</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>0.000675</td>\n",
+       "      <td>14.602</td>\n",
+       "      <td>14.389</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               serial   Fs          sensor shielding  range_kPa_low  \\\n",
+       "0  AirPressureShallow  100       barometer      none            100   \n",
+       "1             1226420  100  vibrating_wire      none             70   \n",
+       "2             1226423   20  vibrating_wire      foam             70   \n",
+       "3             1226419  100  vibrating_wire      foam             70   \n",
+       "4             1226421  100  vibrating_wire      none             70   \n",
+       "5     AirPressureDeep  100       barometer      none            100   \n",
+       "6             1226429  100  vibrating_wire      none             70   \n",
+       "7             2151692   20  vibrating_wire      foam             70   \n",
+       "8             2151691  100  vibrating_wire      foam             70   \n",
+       "9             2149882  100  vibrating_wire      none             70   \n",
+       "\n",
+       "   range_kPa_high  media      type                        model  set_depth_ft  \\\n",
+       "0             100    air  pressure  Keller 0507.01401.051311.07          3.81   \n",
+       "1             170    air     level                Geokon 4500AL          4.46   \n",
+       "2             170  water     level                Geokon 4500AL         -5.83   \n",
+       "3             170  water     level                Geokon 4500AL         -6.71   \n",
+       "4             170  water     level                Geokon 4500AL         -7.71   \n",
+       "5             100    air  pressure  Keller 0507.01401.051311.07          3.86   \n",
+       "6             170    air     level                Geokon 4500AL          4.11   \n",
+       "7             170  water     level                Geokon 4500AL         -9.14   \n",
+       "8             170  water     level                Geokon 4500AL        -18.31   \n",
+       "9             170  water     level                Geokon 4500AL        -19.14   \n",
+       "\n",
+       "                id          well  tmean     dig0        gf    tt   tt0  \\\n",
+       "0  6S.02374.88.HDH       shallow    NaN      NaN       NaN   NaN   NaN   \n",
+       "1  6S.12264.20.HDD       shallow  30.68   9751.0 -0.006458  21.6  21.3   \n",
+       "2  6S.12264.23.BDD       shallow  28.40   9605.0 -0.006347  21.6  22.2   \n",
+       "3  6S.12264.19.HDD       shallow  27.57  10040.0 -0.006441  21.6  21.1   \n",
+       "4  6S.12264.21.HDD       shallow  27.60   9787.0 -0.006724  21.6  21.3   \n",
+       "5  6I.0XXXX.XX.HDH  intermediate    NaN      NaN       NaN   NaN   NaN   \n",
+       "6  6I.12264.29.HDD  intermediate  30.60   9800.0 -0.006428  22.6  21.6   \n",
+       "7  6I.21516.92.BDD  intermediate  25.88   9459.0 -0.008038  22.8  21.8   \n",
+       "8  6I.21516.91.HDD  intermediate  25.70   9414.0 -0.008142  22.8  21.5   \n",
+       "9  6I.21498.82.HDD  intermediate  25.96   9734.0 -0.008075  20.7  21.3   \n",
+       "\n",
+       "         tf      bp     bp0  \n",
+       "0       NaN     NaN     NaN  \n",
+       "1 -0.008795  14.504  14.298  \n",
+       "2 -0.004197  14.504  14.298  \n",
+       "3 -0.010870  14.504  14.298  \n",
+       "4 -0.001145  14.504  14.298  \n",
+       "5       NaN     NaN     NaN  \n",
+       "6 -0.002384  14.367  14.298  \n",
+       "7  0.007666  14.296  14.388  \n",
+       "8  0.008742  14.296  14.388  \n",
+       "9  0.000675  14.602  14.389  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -57,18 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load in the summary of all files - raw 4 hourly data \n",
-    "dfall2 = pd.read_csv(os.path.join(INPUTDIR, 'all2.csv'))\n",
-    "\n",
-    "# Split in baro, 20Hz, 100Hz\n",
-    "all_dataframes = {}\n",
-    "for subdir in ['Baro', '20hz', '100hz']:\n",
-    "    dfsub = dfall2.copy()[dfall2['subdir']==subdir]\n",
-    "    dfsub['datetime'] = pd.to_datetime(dfsub['TIMESTAMP'])\n",
-    "    dfsub.dropna(how='all', axis=1, inplace=True) \n",
-    "    dfsub.drop(dfsub.columns[dfsub.columns.str.contains('unnamed',case = False)],axis = 1, inplace = True)\n",
-    "    all_dataframes[subdir.lower()] = dfsub.copy()\n",
-    "    del dfsub"
+    "summary_dataframes = LLE.load_summary_csv(os.path.join(INPUTDIR, 'all2.csv'), split=True)"
    ]
   },
   {
@@ -315,7 +643,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyrocko2024",
+   "display_name": "skience24",
    "language": "python",
    "name": "python3"
   },
