moving on to processing events again

--- a/Python/new_workflow/10_detect_events.ipynb
+++ b/Python/new_workflow/10_detect_events.ipynb
@@ -87,46 +87,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
+    "\n",
     "# RSAM simulation\n",
     "import obspy\n",
     "\n",
+    "# Create an ObsPy Trace from the DataFrame (we assume 'amplitude' is the seismic data)\n",
+    "trace = Trace()\n",
+    "trace.data = df['amplitude'].values  # Assign the amplitude as the seismic data\n",
+    "trace.stats.station = \"S01\"\n",
+    "trace.stats.network = \"NET\"\n",
+    "trace.stats.sampling_rate = sampling_rate\n",
+    "trace.stats.starttime = obspy.UTCDateTime(df['time'].iloc[0])\n",
+    "\n",
+    "# Step 2: Create a Stream object containing the Trace\n",
+    "stream = Stream(traces=[trace])\n",
+    "\n",
+    "# Step 3: Display some information\n",
+    "print(stream)\n",
+    "print(\"Trace Data:\", stream[0].data[:10])  # Print the first 10 samples of the trace data\n",
+    "print(\"Trace Stats:\", stream[0].stats)\n",
+    "\n",
+    "# Plot the Stream data\n",
+    "stream.plot()\n",
+    "\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
-    "def simulate_rsam(thisdf, watercolumns):\n",
-    "    st = obspy.Stream()\n",
-    "    sample_interval = 1\n",
+    "def simulate_rsam(thisdf, watercolumns, sample_interval_seconds=1):\n",
+    "# Step 1: Handle NaN values\n",
+    "# We can forward fill the NaN values\n",
+    "tr.data = np.nan_to_num(tr.data, nan=np.nanmean(tr.data))  # Replace NaNs with the mean value of the trace\n",
+    "\n",
+    "# Alternatively, you could use interpolation:\n",
+    "# tr.interpolate()  # Uncomment to use linear interpolation\n",
+    "\n",
+    "# Step 2: Downsample (Resample the Trace)\n",
+    "# Let's downsample to 10 Hz\n",
+    "new_sampling_rate = 10\n",
+    "tr_resampled = tr.resample(sampling_rate=new_sampling_rate)\n",
     "    for col in thisdf.columns:\n",
     "        if col in watercolumns:\n",
     "            print(col)\n",
-    "            tr = obspy.Trace(data=thisdf[col].to_numpy())\n",
+    "            # Here we replace NaN with 0, perform a linear detrend, apply a 20-s highpass filter, and then compute the absolute value, and put it back into the dataframe\n",
+    "            tr = obspy.Trace(data=thisdf[col].to_numpy()) # or use .values instead of to_numpy()\n",
+    "            tr.id = f'{col[0:2]}.{col[2:7]}.{col[7:9]}.{col[9:]}\n",
     "            #nan_positions = np.where(np.isnan(tr.data))\n",
     "            tr.data = np.nan_to_num(tr.data, nan=0.0)\n",
     "            tr.detrend('linear')\n",
     "            tr.filter('highpass', freq=0.05)\n",
-    "            #tr.data[nan_positions] = np.nan\n",
+    "            #tr.data[nan_positions] = np.nan # put the NaNs back?\n",
     "            thisdf[col] = abs(tr.data)\n",
     "    #print(thisdf.columns)\n",
     "    #thisdf.reset_index(inplace=True)\n",
     "    display(thisdf)\n",
-    "    #resampleddf = thisdf.resample('10s', on='datetime').median()\n",
+    "    # Here we resample the data\n",
     "    resampleddf = thisdf.resample(f'{sample_interval}s', on='datetime').median()\n",
     "    print(resampleddf)\n",
     "    #for col in resampleddf.columns:\n",
     "    #    resampleddf[col] = resampleddf[col]-resampleddf[col][0]\n",
     "    resampleddf.plot(kind='line')\n",
     "    plt.show()\n",
+    "\n",
+    "    st = obspy.Stream()\n",
     "    for col in resampleddf:\n",
     "        tr2 = obspy.Trace(data=resampleddf[col].to_numpy())\n",
     "        tr2.data = np.nan_to_num(tr2.data, nan=0.0)\n",
-    "        tr2.id = f'{col[0:2]}.{col[2:7]}.{col[7:9]}.{col[9:]}'\n",
+    "        tr2.id = f'{col[0:2]}.{col[2:7]}.{col[7:9]}.{col[9:]}' # create SEED ID\n",
     "        tr2.stats.delta = float(sample_interval)\n",
     "        tr2.stats.starttime=obspy.UTCDateTime(resampleddf.index[0])\n",
     "        st.append(tr2)\n",
     "    st.plot(equal_scale=False);\n",
     "    print(st)\n",
     "    return st\n",
-    "rsamst = simulate_rsam(estimatedAllSensorsMeters, watercolumns)\n",
-    "'''"
+    "rsamst = simulate_rsam(estimatedAllSensorsMeters, watercolumns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "def detrend_dataframe(dforiginal, valuecolumns=[]):\n",
+    "    if len(valuecolumns)>0:\n",
+    "        df = dforiginal.copy()\n",
+    "        for col in valuecolumns:\n",
+    "            if col in df.columns:\n",
+    "\n",
+    "                # Step 1: Handle missing values (e.g., forward-fill)\n",
+    "                df[col] = df[col].fillna(method='ffill')  # Forward fill\n",
+    "\n",
+    "                # Step 2: Detrend the time series using linear regression\n",
+    "\n",
+    "                # Create an array of time (numerical index)\n",
+    "                time = np.arange(len(df)).reshape(-1, 1)\n",
+    "\n",
+    "                # Fit a linear regression model to the data\n",
+    "                model = LinearRegression()\n",
+    "                model.fit(time, df['value'])\n",
+    "\n",
+    "                # Predict the trend\n",
+    "                trend = model.predict(time)\n",
+    "\n",
+    "                # Detrended data: original data - predicted trend\n",
+    "                df[col] = df[col] - trend\n",
+    "        return df\n",
+    "    else:\n",
+    "        raise IOError('No columns given')\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.signal as signal\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def high_pass_dataframe(dforiginal, valuecolumns, freqmin=0.2, sampling_rate=100):\n",
+    "    if len(valuecolumns)>0:\n",
+    "        df = dforiginal.copy()\n",
+    "        for col in valuecolumns:\n",
+    "            if col in df.columns:\n",
+    "\n",
+    "                # Step 1: Handle missing values (e.g., forward-fill)\n",
+    "                df[col] = df[col].fillna(method='ffill')  # Forward fill\n",
+    "\n",
+    "                # Step 2: Filter\n",
+    "                df[col] = high_pass_filter(df[col], freqmin=freqmin, sampling_rate=sampling_rate)\n",
+    "\n",
+    "        return df\n",
+    "    else:\n",
+    "        raise IOError('No columns given')\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define the high-pass filter\n",
+    "def high_pass_filter(data, cutoff_freq, sampling_rate, order=4):\n",
+    "    # Normalize the cutoff frequency\n",
+    "    nyquist = 0.5 * sampling_rate\n",
+    "    normal_cutoff = cutoff_freq / nyquist\n",
+    "    \n",
+    "    # Design a Butterworth high-pass filter\n",
+    "    b, a = signal.butter(order, normal_cutoff, btype='high', analog=False)\n",
+    "    \n",
+    "    # Apply the filter using filtfilt (zero-phase filtering)\n",
+    "    filtered_data = signal.filtfilt(b, a, data)\n",
+    "    return filtered_data\n",
+    "\n"
    ]
   },
   {
